# static-gallery

./: .gitignore  Cargo.toml  LICENSE  README.md
data/templates/hauer/: index.html
data/templates/hauer/css/: main.css
data/templates/hauer/js/: main.js
scripts/: debug.sh  run.sh
src/: configuration.rs  gallery.rs  main.rs
src/gallery/: collection.rs  gallery.rs  lib.rs  picture.rs
src/generate-gallery/: go.mod  go.sum  main.go
src/mi/: bin.rs  fs.rs  img.rs  json.rs  lib.rs  logger.rs  mod.rs  proc.rs
templates/hauer/: index.html
templates/hauer/css/: main.css
templates/hauer/js/: main.js
