[package]
name = "static_gallery"
version = "0.1.0"
edition = "2018"
authors = ["Jens Himmelrath <jens@dev.himmelrath.net>"]

[lib]
name = "mi"
path = "src/mi/lib.rs"

[[bin]]
name = "static_gallery"
path = "src/bin/static_gallery.rs"


[dependencies]
structopt = { version = "0.3", default-features = false }
image = "0.23"
threadpool = "1.8.1"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
zip = "0.5.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
